--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "cryptiles": "^4.1.3",
     "express": "~4.16.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.3.10",
